[package]
name = "print_queues"
version = "1.0.0"
edition = "2021"
authors = ["Pream <preampinbut@outlook.co.th>"]
description = "A print queues that can be add from different thread and print on main thread"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.1.0"